Added /tp to teleport to leaking entity.
Added XML Documentation.

--- a/MemLeakInspector.csproj
+++ b/MemLeakInspector.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591</NoWarn>
+    <DocumentationFile>bin\\Debug\\net7.0\\MemLeakInspector.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
